tux3.sv_auto_order.75c0ed735c8941106918fb60dcaa3bb0b1761a43
Running as unit: run-p2810803-i15390877.scope; invocation ID: 0b5f779d7e404edfa68b2a1d4ddbb536
   Compiling memchr v2.3.4
    Checking cfg-if v1.0.0
   Compiling proc-macro2 v1.0.39
   Compiling unicode-ident v1.0.0
   Compiling version_check v0.9.4
   Compiling syn v1.0.96
   Compiling autocfg v1.1.0
    Checking bitflags v1.3.2
   Compiling lexical-core v0.7.6
    Checking static_assertions v1.1.0
    Checking ryu v1.0.10
    Checking arrayvec v0.5.2
   Compiling radium v0.5.3
   Compiling nom v5.1.2
   Compiling nom v6.2.1
    Checking tap v1.0.1
    Checking funty v1.1.0
    Checking wyz v0.2.0
    Checking bytecount v0.6.3
    Checking bytecount v0.3.2
   Compiling crossbeam-utils v0.8.8
   Compiling regex-syntax v0.6.26
   Compiling quote v1.0.18
    Checking bitvec v0.19.6
   Compiling aho-corasick v0.7.15
   Compiling libc v0.2.126
   Compiling same-file v1.0.6
   Compiling walkdir v2.3.2
   Compiling memoffset v0.6.5
    Checking lazy_static v1.4.0
   Compiling crossbeam-epoch v0.9.8
   Compiling regex v1.4.6
    Checking scopeguard v1.1.0
   Compiling rayon-core v1.9.3
   Compiling indexmap v1.8.2
    Checking str-concat v0.2.0
    Checking crossbeam-deque v0.8.1
    Checking num_cpus v1.13.1
    Checking crossbeam-channel v0.5.4
   Compiling rayon v1.5.3
   Compiling anyhow v1.0.57
    Checking os_str_bytes v6.1.0
    Checking hashbrown v0.11.2
    Checking clap_lex v0.2.0
    Checking nom_locate v1.0.0
    Checking nom_locate v2.1.0
    Checking atty v0.2.14
    Checking textwrap v0.15.0
    Checking either v1.6.1
    Checking strsim v0.10.0
    Checking termcolor v1.1.3
   Compiling sv-parser-syntaxtree v0.11.3
    Checking clap v3.1.18
    Checking nom_locate v3.0.2
    Checking nom-greedyerror v0.3.1
   Compiling nom-recursive-macros v0.3.0
   Compiling nom-tracable-macros v0.7.0
   Compiling thiserror-impl v1.0.31
   Compiling nom-packrat-macros v0.5.0
   Compiling sv-parser-macros v0.11.3
    Checking nom-tracable v0.7.0
    Checking nom-recursive v0.3.0
    Checking nom-packrat v0.5.0
    Checking thiserror v1.0.31
    Checking sv-parser-error v0.11.3
    Checking sv-parser-parser v0.11.3
    Checking sv-parser-pp v0.11.3
    Checking sv-parser v0.11.3
    Checking sv_auto_order v0.1.0 (/tmp/nix-shell.uUVugk/tux3_sv_auto_order_cqsvks3b)
warning: use of deprecated struct `clap::App`: Replaced with `Command`
 --> src/main.rs:3:12
  |
3 | use clap::{App, arg};
  |            ^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `clap::App`: Replaced with `Command`
  --> src/main.rs:13:16
   |
13 |     let args = App::new("SV Auto Order")
   |                ^^^

error[E0282]: type annotations needed for `Vec<_>`
  --> src/main.rs:30:9
   |
30 |     let files = filepaths.into_par_iter()
   |         ^^^^^
...
43 |         for module_def in &file.modules_defined {
   |                            -------------------- type must be known at this point
   |
help: consider giving `files` an explicit type, where the placeholders `_` are specified
   |
30 |     let files: Vec<_> = filepaths.into_par_iter()
   |              ++++++++

error[E0282]: type annotations needed
  --> src/main.rs:44:32
   |
44 |             module_defs.insert(module_def.clone(), file);
   |                                ^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> src/main.rs:47:33
   |
47 |             package_defs.insert(package_def.clone(), file);
   |                                 ^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed for `(_, _)`
  --> src/main.rs:86:52
   |
86 |     let roots = file_users.into_iter().filter_map(|(f, u)| {
   |                                                    ^^^^^^
87 |         if u.is_empty() {
   |            - type must be known at this point
   |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
   |
86 |     let roots = file_users.into_iter().filter_map(|(f, u): (_, _)| {
   |                                                          ++++++++

For more information about this error, try `rustc --explain E0282`.
warning: `sv_auto_order` (bin "sv_auto_order") generated 2 warnings
error: could not compile `sv_auto_order` (bin "sv_auto_order") due to 4 previous errors; 2 warnings emitted
